updated path for jquery.min.js file, it fixed the issue with menu list display on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -344,6 +344,8 @@ input:focus {
     color: #d66926;
 }
 
+
+
 .header-navbar__hamburger {
     position: relative;
     width: 30px;
@@ -1136,6 +1138,8 @@ input:focus {
     }
 }
 
+
+
 @media (max-width: 767.8px) {
     .header-navbar__list {
         position: absolute;
@@ -1149,4 +1153,19 @@ input:focus {
         background-color: rgba(68, 89, 110, 0.9);
         box-shadow: -3px 3px 20px -10px black;
     }
+}
+
+@media (max-width: 767.8px)
+.header-navbar__list {
+    position: absolute;
+    top: 100%;
+    right: 20px;
+    display: none;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-align: right;
+    background-color: rgba(68, 89, 110, 0.9);
+    -webkit-box-shadow: -3px 3px 20px -10px black;
+    box-shadow: -3px 3px 20px -10px black;
 }
